# spectral-tools

./: .editorconfig  .gitignore  Andrews_play.py  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-test.yml  release.yml
addLATER/: Andrews_muckaround_code.py  extract_TSA_data.py  extract_tsa_jclst_data.py  merge_TSG_TSA_outputs.py  ternary_maker.py
csiro_spectral_tools/data/CSV/: CSV_test2.csv
csiro_spectral_tools/data/Corescan/: testImage.hdr
csiro_spectral_tools/data/HyLogger/: UDD10701_stage6.ini
csiro_spectral_tools/ext/: chulls.pyx  setup.py
csiro_spectral_tools/extraction/: extraction.py
csiro_spectral_tools/hulls/: convexhulls.py
csiro_spectral_tools/io/: parse_csv.py  parse_tsg.py
docs/source/: conf.py  csiro_spectral_tools.extraction.rst  csiro_spectral_tools.hulls.rst  csiro_spectral_tools.io.rst  csiro_spectral_tools.rst  index.rst  modules.rst  spectraltools.extraction.rst  spectraltools.hulls.rst  spectraltools.io.rst  spectraltools.rst
speclib/: speclib.py
speclib/spectral_libraries/: colors_tsg.csv  merged_vnswir_culled_df.csv  tir_for_tsg.csv  tsg_colors.csv  tsg_jhu_merge_tir_spectra.csv  tsg_tir_ms9_df.csv  tsg_tir_ms9_spectra.csv
spectraltools/: __init__.py
spectraltools.egg-info/: PKG-INFO  requires.txt
spectraltools/clustering/: clustering.py
spectraltools/data/CSV/: CSV_test.csv
spectraltools/data/HyLogger/: UDD10701_stage6.hdr  UDD10701_stage6.tsg
spectraltools/docs/spex/: index.html
spectraltools/docs/spex/ext/: chulls.html  index.html
spectraltools/docs/spex/extraction/: index.html  specex.html
spectraltools/docs/spex/io/: index.html  instruments.html
spectraltools/docs/spex/python_hulls/: index.html  phull.html
spectraltools/docs/spex/speclib/: index.html  speclib.html
spectraltools/docs/spex/utilities/: find_indices.html  generator.html  index.html  indices_to_coordinates.html
spectraltools/ext/: chulls.c  chulls.cp310-win_amd64.pyd  chulls.pyx  convexhulls.py  setup.py
spectraltools/extraction/: __init__.py  extraction.py
spectraltools/hulls/: convexhulls.py
spectraltools/io/: __init__.py  parse_csv.py  parse_envi.py  parse_numpy.py  parse_tsg.py
spectraltools/speclib/: speclib.py
spectraltools/speclib/spectral_libraries/: tsg_jhu_merge_tir_df.csv  working_up_colours.csv  working_up_colours_mkII.csv
tests/: notebook_hymap.ipynb  test_hymap.py
