[tool.poetry]
name = "spectraltools"
version = "0.1.0"
description = "A small collection of tools that I have used to work with spectral data. A bunch of IO stuff, some spectral extraction stuff and some convex hull correction stuff."
authors = ["Andrew Rodger", "Sam Bradley <sam.bradley@csiro.au>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4"
numpy = ">=1.18"
scipy = ">=1.7.2"
pandas = ">=1.1"
spectral = "^0.23"
simplejpeg = "^1.6.5"

[tool.poetry.group.dev.dependencies]
Cython = "^0.29.32"
setuptools = "^65.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
